--- a/app/src/main/res/layout/activity_property.xml
+++ b/app/src/main/res/layout/activity_property.xml
@@ -11,28 +11,21 @@
 
     </data>
 
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.PropertyActivity">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_property"
-        android:layout_width="368dp"
-        android:layout_height="455dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="392dp"
+        android:layout_height="554dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:idx_change="@{viewmodel.property_idx_change}"
-        app:mylist="@{viewmodel.propertylist}"
-        />
-</android.support.constraint.ConstraintLayout>
+        app:mylist="@{viewmodel.propertylist}" />
+</LinearLayout>
 </layout>
