--- a/app/src/main/res/layout/activity_map_frag.xml
+++ b/app/src/main/res/layout/activity_map_frag.xml
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".map.MapFragActivity"
-    tools:layout_editor_absoluteY="81dp">
+    android:orientation="vertical">
 
     <fragment
         android:id="@+id/fragment"
         android:name="com.example.shaochengyang.zillow.map.MapFragment"
-        android:layout_width="413dp"
-        android:layout_height="599dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_width="match_parent"
+        android:layout_height="610dp"
+
+         />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_map"
-        android:layout_width="406dp"
-        android:layout_height="59dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_marginBottom="0dp"/>
+</LinearLayout>
