--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -2,10 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/property_icon"
-               android:title="property"
+               android:title="Search"
                app:showAsAction="always"
-               android:icon="@drawable/ic_room"
+               android:icon="@drawable/ic_search_black_24dp"
         >
     </item>
+    <item android:id="@+id/yourhome_icon"
+        android:title="Your Home"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_home_black_24dp"
+        />
+
 
 </menu>
