--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -12,6 +12,11 @@
         app:showAsAction="always"
         android:icon="@drawable/ic_home_black_24dp"
         />
+    <item android:id="@+id/more_icon"
+        android:title="More"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_more_horiz_black_24dp"
+        />
 
 
 </menu>
