--- a/app/src/main/res/layout/property_item_layout.xml
+++ b/app/src/main/res/layout/property_item_layout.xml
@@ -7,8 +7,8 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:layout_width="372dp"
-        android:layout_height="132dp"
+        android:layout_width="365dp"
+        android:layout_height="185dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -21,31 +21,21 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView_id"
-                android:layout_width="41dp"
+                android:id="@+id/textView_address"
+                android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="ID"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/textView_address"
-                android:layout_width="115dp"
-                android:layout_height="36dp"
-                android:layout_marginStart="68dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="4dp"
                 android:text="Address"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textView_city"
-                android:layout_width="99dp"
+                android:layout_width="wrap_content"
                 android:layout_height="36dp"
-                android:layout_marginStart="200dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="48dp"
                 android:text="City"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -71,6 +61,56 @@
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
+
+            <TextView
+                android:id="@+id/textView_state"
+                android:layout_width="wrap_content"
+                android:layout_height="33dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="92dp"
+                android:text="State"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView_country"
+                android:layout_width="wrap_content"
+                android:layout_height="33dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="136dp"
+                android:text="Country"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView_pro_status"
+                android:layout_width="wrap_content"
+                android:layout_height="33dp"
+                android:layout_marginStart="192dp"
+                android:layout_marginTop="4dp"
+                android:text="Pro Status"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView_price"
+                android:layout_width="wrap_content"
+                android:layout_height="33dp"
+                android:layout_marginStart="192dp"
+                android:layout_marginTop="48dp"
+                android:text="Price"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView_mortgage"
+                android:layout_width="wrap_content"
+                android:layout_height="33dp"
+                android:layout_marginStart="192dp"
+                android:layout_marginTop="92dp"
+                android:text="Mortgage"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
