tenant property view map

--- a/app/src/main/res/layout/activity_tenant_property_view.xml
+++ b/app/src/main/res/layout/activity_tenant_property_view.xml
@@ -78,7 +78,8 @@
                     android:layout_height="80dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="40dp"
-                    android:src="@drawable/map_marker_icon" />
+                    android:src="@drawable/map_marker_icon"
+                    />
 
             </LinearLayout>
 
