--- a/app/src/main/res/layout/frag_add_property.xml
+++ b/app/src/main/res/layout/frag_add_property.xml
@@ -9,8 +9,8 @@
 
     <LinearLayout
 
-        android:layout_width="273dp"
-        android:layout_height="228dp"
+        android:layout_width="265dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="60dp"
         android:background="@color/colorFragBackground"
@@ -81,6 +81,24 @@
             android:background="@color/colorFragBackground"
             android:ems="10"
             android:hint="Mortgage"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/editText_lat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorFragBackground"
+            android:ems="10"
+            android:hint="Latitude"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/editText_long"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorFragBackground"
+            android:ems="10"
+            android:hint="Longitude"
             android:inputType="textPersonName" />
 
         <Button
