--- a/app/src/main/res/layout/activity_tenant_info.xml
+++ b/app/src/main/res/layout/activity_tenant_info.xml
@@ -31,8 +31,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:mylist_tenant="@{viewmodel.mylist_tenant}"
-        app:idx_change_tenant="@{viewmodel.idx_change_tenant}"
+        app:mylist="@{viewmodel.mylist_tenant}"
+        app:idx_change="@{viewmodel.idx_change}"
         />
 
     <TextView
