--- a/app/src/main/res/layout/activity_tenant_property_view.xml
+++ b/app/src/main/res/layout/activity_tenant_property_view.xml
@@ -72,14 +72,29 @@
                         android:textSize="18dp" />
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/Img_map_marker"
-                    android:layout_width="88dp"
-                    android:layout_height="80dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="40dp"
-                    android:src="@drawable/map_marker_icon"
-                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/Img_map_marker"
+                        android:layout_width="88dp"
+                        android:layout_height="80dp"
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/map_marker_icon" />
+
+                    <Button
+                        android:id="@+id/button_rentthis"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="5dp"
+                        android:background="#51ff45"
+                        android:text="Rent This\n Property" />
+                </LinearLayout>
+
 
             </LinearLayout>
 
