--- a/app/src/main/res/menu/toolbar_property.xml
+++ b/app/src/main/res/menu/toolbar_property.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/yourhome_icon"
-        android:title="Your Home"
+    <item android:id="@+id/info_icon"
+        android:title="Map"
         app:showAsAction="always"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_map"
         />
 
 
