--- a/app/src/main/res/layout/activity_tenant_info.xml
+++ b/app/src/main/res/layout/activity_tenant_info.xml
@@ -19,21 +19,49 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_tenant"
-        android:layout_width="402dp"
-        android:layout_height="559dp"
+        android:layout_width="match_parent"
+        android:layout_height="523dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="60dp"
+        app:idx_change="@{viewmodel.idx_change}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:mylist="@{viewmodel.mylist_tenant}"
-        app:idx_change="@{viewmodel.idx_change}"
-        />
+        app:layout_constraintVertical_bias="0.882"
+        app:mylist="@{viewmodel.mylist_tenant}" />
+
+    <TextView
+        android:layout_width="202dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="My Tenants"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="105dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/zillow_icon" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_tenantinfo"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
 </layout>
