--- a/app/src/main/res/layout/frag_add_property.xml
+++ b/app/src/main/res/layout/frag_add_property.xml
@@ -7,104 +7,122 @@
     android:layout_height="match_parent"
     >
 
-    <LinearLayout
-
-        android:layout_width="265dp"
-        android:layout_height="wrap_content"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="395dp"
+        android:layout_height="288dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="60dp"
-        android:background="@color/colorFragBackground"
-        android:orientation="vertical"
+        android:background="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <EditText
-            android:id="@+id/editText_address"
+        <LinearLayout
+
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="268dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
             android:background="@color/colorFragBackground"
-            android:ems="10"
-            android:hint="Address"
-            android:inputType="textPersonName"
-            tools:layout_editor_absoluteX="43dp"
-            tools:layout_editor_absoluteY="58dp" />
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/editText_city"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorFragBackground"
-            android:ems="10"
-            android:hint="City"
-            android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/editText_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorFragBackground"
+                android:ems="10"
+                android:hint="Address"
+                android:inputType="textPersonName"
+                tools:layout_editor_absoluteX="43dp"
+                tools:layout_editor_absoluteY="58dp" />
 
-        <EditText
-            android:id="@+id/editText_state"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorFragBackground"
-            android:ems="10"
-            android:hint="State"
-            android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/editText_city"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorFragBackground"
+                android:ems="10"
+                android:hint="City"
+                android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/editText_country"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorFragBackground"
-            android:ems="10"
-            android:hint="Country"
-            android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/editText_state"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorFragBackground"
+                android:ems="10"
+                android:hint="State"
+                android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/editText_pro"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorFragBackground"
-            android:ems="10"
-            android:hint="Pro Status"
-            android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/editText_country"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorFragBackground"
+                android:ems="10"
+                android:hint="Country"
+                android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/editText_price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorFragBackground"
-            android:ems="10"
-            android:hint="Purchase Price"
-            android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/editText_pro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorFragBackground"
+                android:ems="10"
+                android:hint="Pro Status"
+                android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/editText_mortgage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorFragBackground"
-            android:ems="10"
-            android:hint="Mortgage"
-            android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/editText_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorFragBackground"
+                android:ems="10"
+                android:hint="Purchase Price"
+                android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/editText_lat"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorFragBackground"
-            android:ems="10"
-            android:hint="Latitude"
-            android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/editText_mortgage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorFragBackground"
+                android:ems="10"
+                android:hint="Mortgage"
+                android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/editText_long"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorFragBackground"
-            android:ems="10"
-            android:hint="Longitude"
-            android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/editText_lat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorFragBackground"
+                android:ems="10"
+                android:hint="Latitude"
+                android:inputType="textPersonName" />
 
-        <Button
-            android:id="@+id/button_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add" />
-    </LinearLayout>
+            <EditText
+                android:id="@+id/editText_long"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorFragBackground"
+                android:ems="10"
+                android:hint="Longitude"
+                android:inputType="textPersonName" />
+
+            <Button
+                android:id="@+id/button_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
+
 </android.support.constraint.ConstraintLayout>
