--- a/app/src/main/res/layout/activity_pre_chat_tenant.xml
+++ b/app/src/main/res/layout/activity_pre_chat_tenant.xml
@@ -4,29 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorSignInBackGround"
     tools:context=".ui.chat.PreChatTenantActivity">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="545dp"
+        android:layout_marginTop="284dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/zillow_ad" />
 
     <TextView
         android:id="@+id/textView_tenant_header"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="140dp"
         android:text="Tenant"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText_landlord_nm"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="288dp"
+        android:layout_marginTop="300dp"
         android:ems="10"
         android:hint="Type Landlord Name Here"
         android:inputType="textPersonName"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
-        android:layout_marginBottom="152dp"
+        android:layout_marginBottom="220dp"
         android:text="Chat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
