--- a/app/src/main/res/menu/toolbar_tenant_info.xml
+++ b/app/src/main/res/menu/toolbar_tenant_info.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/more_icon"
+    <item android:id="@+id/chat_icon"
         android:title="More"
         app:showAsAction="always"
-        android:icon="@drawable/ic_more_horiz_black_24dp"
+        android:icon="@drawable/ic_chat"
         />
 
 </menu>
