--- a/app/src/main/res/layout/activity_tenant_property_view.xml
+++ b/app/src/main/res/layout/activity_tenant_property_view.xml
@@ -259,6 +259,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="0dp"
+        android:gravity="center"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme" />
