--- a/app/src/main/res/layout/activity_property.xml
+++ b/app/src/main/res/layout/activity_property.xml
@@ -20,10 +20,10 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_property"
-        android:layout_width="402dp"
-        android:layout_height="559dp"
+        android:layout_width="400dp"
+        android:layout_height="541dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:idx_change="@{viewmodel.idx_change}"
@@ -47,14 +47,24 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:layout_width="104dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="155dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="My Property"
-        android:textSize="18sp"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="105dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/zillow_icon" />
 
 </android.support.constraint.ConstraintLayout>
 </layout>
