--- a/app/src/main/res/menu/toolbar_property.xml
+++ b/app/src/main/res/menu/toolbar_property.xml
@@ -22,10 +22,10 @@
         >
     </item>
 
-    <item android:id="@+id/more_icon"
+    <item android:id="@+id/chat_icon"
         android:title="More"
         app:showAsAction="always"
-        android:icon="@drawable/ic_more_horiz_black_24dp"
+        android:icon="@drawable/ic_chat"
         />
 
 </menu>
