--- a/app/src/main/res/menu/toolbar_tenant_info.xml
+++ b/app/src/main/res/menu/toolbar_tenant_info.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item android:id="@+id/refresh_icon"
+        android:title="More"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_refresh"
+        />
+
     <item android:id="@+id/chat_icon"
         android:title="More"
         app:showAsAction="always"
