--- a/app/src/main/res/layout/activity_map_frag.xml
+++ b/app/src/main/res/layout/activity_map_frag.xml
@@ -5,13 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".map.MapFragActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#4052b5">
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:text="Select Property On the Map"
+        android:textSize="28dp"
+        android:textStyle="bold"
+        android:layout_marginLeft="20dp" />
 
     <fragment
         android:id="@+id/fragment"
         android:name="com.example.shaochengyang.zillow.map.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="610dp"
+
+        android:layout_height="560dp"
 
          />
 
