--- a/app/src/main/res/layout/activity_tenant_input_info.xml
+++ b/app/src/main/res/layout/activity_tenant_input_info.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.tenant.TenantInputInfoActivity">
+    tools:context=".ui.tenant.TenantInputInfoActivity"
+    android:background="#c6e0ff">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
