--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="colorSignInBackGround">#3b57ec</color>
     <color name="colorCardBackGround">#eaffb9</color>
     <color name="colorChatOther">#afed9c</color>
+    <color name="colorPropertyBackground">#ccf4f1</color>
 
 </resources>
